# FaceRecognition

./: .travis.yml  CMakeLists.txt  FaceRecognition.cpp  README.md  align_faces.py  create_csv.py  data.csv
